--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         <section id="contact">
             <h2>Contact</h2>
             <form action="mailto:naveenkumarcivil2020@gmail.com" method="POST" enctype="text/plain">
-                <input type="text" name="name" placeholder="Your Name" required />
-                <input type="email" name="email" placeholder="Your Email" required />
-                <textarea name="message" rows="4" placeholder="Your Message" required></textarea>
+                <input type="text" name="name" placeholder="I'm Naveen Kumar M" required />
+                <input type="email" name="email" placeholder="Naveenkumarcivil2020@gmail.com" required />
+                <textarea name="message" rows="4" placeholder="I'm so excited to work with you to growth your business" required></textarea>
                 <button type="submit" class="btn">Send Message</button>
             </form>
         </section>
