--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         Enabled tracking and managing sales follow-ups, ensuring timely responses and improving conversion rates.
                         <br><em>Tech: Google Apps Script, Google Forms, Excel (XLOOKUP, Pivot, Query)</em>
                     </p>
-                    <a href="#" target="_blank">View Project</a>
+                    <a href="https://docs.google.com/spreadsheets/d/1qZAZ84J0O-TIuRy86tbFr9iAQneZpOL2kvMOS8AMdB8/edit?usp=sharing" target="_blank">View Project</a>
                 </div>
                 <div class="card">
                     <h3>Lead Data Analysis & Reporting Optimization</h3>
@@ -111,7 +111,7 @@
                         Built advanced SQL and Metabase dashboards for comprehensive lead analysis and source identification.
                         <br><em>Tech: SQL, Metabase, Power BI</em>
                     </p>
-                    <a href="#" target="_blank">View Project</a>
+                    <a href="https://github.com/Kumley05/MetaBase/blob/main/Export_Lead.sql" target="_blank">View Project</a>
                 </div>
                 <div class="card">
                     <h3>Lead Management Automation & Real-Time Data Processing</h3>
@@ -119,7 +119,7 @@
                         Automated lead transfer and management using Google Apps Script and Excel, reducing overhead and ensuring timely lead distribution.
                         <br><em>Tech: Google Apps Script, Query, XLOOKUP</em>
                     </p>
-                    <a href="#" target="_blank">View Project</a>
+                    <a href="https://github.com/Kumley05/Google_AppScript/blob/main/TransferData.gs" target="_blank">View Project</a>
                 </div>
             </div>
         </section>
