--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><strong>Languages & Libraries:</strong> SQL, Python, JavaScript, DAX, NumPy</li>
                 <li><strong>Data Analysis & Reporting:</strong> Power BI, Looker Studio, Excel (XLOOKUP, Pivot Tables, Query), Metabase, Google Analytics, SQL queries</li>
                 <li><strong>Automation & Scripting:</strong> Google Apps Script, Selenium, API Automation, Excel Macro</li>
-                <li><strong>Cloud & Databases:</strong> AWS, PostgreSQL, MySQL, Salesforce, Zoho</li>
+                <li><strong>Cloud & Databases:</strong> AWS, Snowflake, PostgreSQL, MySQL, Salesforce, Zoho</li>
                 <li><strong>Frameworks:</strong> REST APIs, Automation (Selenium), CRM Integrations (leadSquare, Meritto, ExtraEdge)</li>
                 <li><strong>Project & Workflow:</strong> Jira, Git, Postman, Google Forms</li>
                 <li><strong>Methodologies:</strong> Agile (Scrum), Backlog Management, User Stories, Cross-functional Collaboration</li>
